# GenAI-Architect-Program-Azure

Assignment_1/: README.md  chain_pipeline.py  config.py  llm_client.py  main.py  mlflow_tracker.py  models.py  news_fetcher.py  pyproject.toml  requirements.txt  sentiment_analyzer.py  stock_symbol.py  streamlit_app.py
Assignment_2/: README.md  __init__.py  config.py  course_recommender.py  evaluation.py  main.py  pyproject.toml
Assignment_2/models/: __init__.py  data_models.py
Assignment_2/services/: __init__.py  azure_client.py  embeddings_service.py  metadata_extractor.py  recommendation_engine.py  vector_store.py
Assignment_2/vector_store/: embeddings.pkl  metadata.pkl  store_info.pkl
Assignment_3/: main.py  pyproject.toml
