[project]
name = "assignment-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain",
    "langchain-openai",
    "langchain-core",
    "pydantic",
    "python-dotenv",
    "mlflow",
    "requests",
    "streamlit",
    "langchain-community>=0.3.29",
    "yfinance>=0.2.65",
]

[dependency-groups]
dev = [
    "isort",
    "ruff",
]
